--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@ $break-hugepc: '1600px';
 $background: #000620;
 $identity: #e87d9e;
 $gray1: #9ea0a4;
+$second: #fcf8ac;
 
 /*=================톤앤매너(스킬)=================*/
 $html: #e54d26;
