--- a/css/scroll.css
+++ b/css/scroll.css
@@ -1,3 +1,10 @@
+@charset "UTF-8";
+/*=================중단점=================*/
+/*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================아이덴티티 칼라=================*/
+/*=================폰트패밀리=================*/
+/*=================여백=================*/
 html {
   overflow: overlay;
 }
@@ -26,4 +33,22 @@ html .gnb_nyan::-webkit-scrollbar {
 html .gnb_nyan::-webkit-scrollbar-thumb {
   background: rgb(31, 31, 31);
   background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 5%, #e87d9e 5%, #e87d9e 15%, transparent 15%, transparent 20%, #e87d9e 20%, #e87d9e 30%, transparent 30%, transparent);
+}
+
+::selection {
+  background: #e87d9e;
+  color: #FFF;
+  text-shadow: none;
+}
+
+::-moz-selection {
+  background: #e87d9e;
+  color: #FFF;
+  text-shadow: none;
+}
+
+::-webkit-selection {
+  background: #e87d9e;
+  color: #FFF;
+  text-shadow: none;
 }
