--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -464,7 +464,7 @@
 
                 left: 20%;
                 top: 45%;
-                rotate: -110deg;
+                rotate: -120deg;
                 width: 30%;
 
                 @include responsive(tablet-cat) {
@@ -655,6 +655,7 @@
 @mixin common_btn($color) {
     @include nyan_small_margin;
     display: flex;
+    width: 100%;
     justify-content: space-between;
 
     &>button {
@@ -664,7 +665,7 @@
         font-family: $common;
         width: 47.5%;
         border-width: 2px;
-        border-style: solid;    
+        border-style: solid;
 
         text-align: center;
         border-radius: calc(1000px);
