--- a/css/javascript.css
+++ b/css/javascript.css
@@ -40,6 +40,7 @@
   width: 100%;
   background-color: rgba(0, 6, 32, 0.3);
 }
+
 span.mk_highlight {
   color: #e54d26;
 }
@@ -52,18 +53,21 @@ span.mk_highlight {
 .common_under {
   color: #e87d9e;
   z-index: -1;
-  box-shadow: inset 0 calc((10px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
+  box-shadow: inset 0 calc(calc(10px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
 }
+
 @media screen and (min-width: 768px) {
   .common_under {
-    box-shadow: inset 0 calc((6px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
+    box-shadow: inset 0 calc(calc(6px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
   }
 }
+
 @media screen and (min-width: 1200px) {
   .common_under {
     box-shadow: inset 0 -9px 0 rgba(232, 125, 158, 0.3);
   }
 }
+
 @media screen and (min-width: 1600px) {
   .common_under {
     box-shadow: inset 0 -10.5px 0 rgba(232, 125, 158, 0.3);
