--- a/css/scroll.css
+++ b/css/scroll.css
@@ -8,30 +8,37 @@
 html {
   overflow: overlay;
 }
+
 html::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px #e87d9e;
   border-radius: 8px;
 }
+
 html::-webkit-scrollbar {
   width: 8px;
 }
+
 html::-webkit-scrollbar-thumb {
-  background: rgb(31, 31, 31);
+  background: #1f1f1f;
   border-radius: 8px;
   background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 5%, #e87d9e 5%, #e87d9e 15%, transparent 15%, transparent 20%, #e87d9e 20%, #e87d9e 30%, transparent 30%, transparent);
 }
+
 html .gnb_nyan {
   overflow: overlay;
 }
+
 html .gnb_nyan::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px #e87d9e;
   border-radius: 8px;
 }
+
 html .gnb_nyan::-webkit-scrollbar {
   width: 8px;
 }
+
 html .gnb_nyan::-webkit-scrollbar-thumb {
-  background: rgb(31, 31, 31);
+  background: #1f1f1f;
   background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 5%, #e87d9e 5%, #e87d9e 15%, transparent 15%, transparent 20%, #e87d9e 20%, #e87d9e 30%, transparent 30%, transparent);
 }
 
