--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,11 @@ $identity: #e87d9e;
 $gray1: #9ea0a4;
 $second: #fcf8ac;
 
+/*=============디자인노트=================*/
+
+$dn_txt: #444;
+$dn_back: #f2f2f2;
+
 /*=================톤앤매너(스킬)=================*/
 $html: #e54d26;
 /*=================아이덴티티 칼라=================*/
@@ -32,10 +37,7 @@ $kidcat_t2: $background;
 
 //웹페이지(페어몬트)
 
-
-
 /*=================폰트패밀리=================*/
-// $bighead: 'Pacifico';
 $common: 'ImcreSoojin';
 $minor: 'GoyangIlsan';
 
