--- a/css/javascript.css
+++ b/css/javascript.css
@@ -1,24 +1,28 @@
 @charset "UTF-8";
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
@@ -31,8 +35,16 @@
   color: #e87d9e;
 }
 
+.not_scroll {
+  position: fixed;
+  overflow: hidden;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .header_fix {
-  z-index: 2;
+  z-index: 8;
   position: fixed;
   top: 0;
   left: 0;
@@ -40,7 +52,6 @@
   width: 100%;
   background-color: rgba(0, 6, 32, 0.3);
 }
-
 span.mk_highlight {
   color: #e54d26;
 }
@@ -53,21 +64,18 @@ span.mk_highlight {
 .common_under {
   color: #e87d9e;
   z-index: -1;
-  box-shadow: inset 0 calc(calc(10px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
+  box-shadow: inset 0 calc((10px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
 }
-
 @media screen and (min-width: 768px) {
   .common_under {
-    box-shadow: inset 0 calc(calc(6px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
+    box-shadow: inset 0 calc((6px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
   }
 }
-
 @media screen and (min-width: 1200px) {
   .common_under {
     box-shadow: inset 0 -9px 0 rgba(232, 125, 158, 0.3);
   }
 }
-
 @media screen and (min-width: 1600px) {
   .common_under {
     box-shadow: inset 0 -10.5px 0 rgba(232, 125, 158, 0.3);
