--- a/css/mixin.css
+++ b/css/mixin.css
@@ -1,12 +1,14 @@
 @charset "UTF-8";
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
