--- a/css/tiles.css
+++ b/css/tiles.css
@@ -1,12 +1,14 @@
 @charset "UTF-8";
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=============디자인노트=================*/
 /*=================톤앤매너(스킬)=================*/
 /*=================아이덴티티 칼라=================*/
 /*=================폰트패밀리=================*/
@@ -32,21 +34,18 @@
   opacity: 0;
   animation: tile 10s linear infinite;
 }
-
 @media screen and (min-width: 768px) {
   .tile {
     width: 20px;
     height: 20px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .tile {
     width: 25px;
     height: 25px;
   }
 }
-
 @media screen and (min-width: 1600px) {
   .tile {
     width: 30px;
