--- a/scss/javascript.scss
+++ b/scss/javascript.scss
@@ -10,18 +10,17 @@
     color: $identity;
 }
 
-// .not_scroll {
-//     height: 100%;
-//     overflow: auto;
-// }
-
-// .gnb_scroll {
-//     overflow: initial!important;
-// }
+.not_scroll {
+    position: fixed;
+    overflow: hidden;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 
 .header_fix {
-    z-index: 2;
+    z-index: 8;
     position: fixed;
     top: 0;
     left: 0;
