--- a/css/footer.css
+++ b/css/footer.css
@@ -234,22 +234,32 @@ footer .footer_important .footer_icons {
   }
 }
 footer .footer_important .footer_icons img {
+  position: relative;
+  cursor: pointer;
   width: calc(10px + 3vw);
+  margin-right: 7px;
 }
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_icons img {
+    margin-right: 10px;
     width: calc(20px + 3vw);
   }
 }
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_icons img {
-    width: 50px;
+    margin-right: 12px;
+    width: 60px;
   }
 }
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_icons img {
-    width: 60px;
+    margin-right: 15px;
+    width: 80px;
   }
+}
+footer .footer_important .footer_icons img:hover {
+  rotate: 30deg;
+  transition: rotate 0.2s linear;
 }
 footer .footer_important .footer_information {
   position: absolute;
