--- a/css/index.css
+++ b/css/index.css
@@ -8712,7 +8712,6 @@ main .main_contactme .cm_flex .cm_contents_area .cm_hidden .cm_hd_main form .cmh
   border-radius: inherit;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  background-color: #000620;
 }
 .design_note .design_bighead .design_end .de_flex {
   display: flex;
@@ -8724,29 +8723,6 @@ main .main_contactme .cm_flex .cm_contents_area .cm_hidden .cm_hd_main form .cmh
 @media screen and (min-width: 1200px) {
   .design_note .design_bighead .design_end .de_flex {
     padding: 1em;
-  }
-}
-.design_note .design_bighead .design_end img {
-  display: block;
-  height: calc(6px + 2vw);
-  margin-right: 7px;
-}
-@media screen and (min-width: 768px) {
-  .design_note .design_bighead .design_end img {
-    height: calc(8px + 1vw);
-    margin-right: 10px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .design_note .design_bighead .design_end img {
-    height: 28px;
-    margin-right: 12px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .design_note .design_bighead .design_end img {
-    height: 36px;
-    margin-right: 15px;
   }
 }
 .design_note .design_bighead .design_end h4 {
@@ -9003,22 +8979,32 @@ footer .footer_important .footer_icons {
   }
 }
 footer .footer_important .footer_icons img {
+  position: relative;
+  cursor: pointer;
   width: calc(10px + 3vw);
+  margin-right: 7px;
 }
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_icons img {
+    margin-right: 10px;
     width: calc(20px + 3vw);
   }
 }
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_icons img {
-    width: 50px;
+    margin-right: 12px;
+    width: 60px;
   }
 }
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_icons img {
-    width: 60px;
+    margin-right: 15px;
+    width: 80px;
   }
+}
+footer .footer_important .footer_icons img:hover {
+  rotate: 30deg;
+  transition: rotate 0.2s linear;
 }
 footer .footer_important .footer_information {
   position: absolute;
